--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "server-only": "^0.0.1"
   },
   "devDependencies": {
+    "@orgajs/reorg": "^4.1.2",
+    "@orgajs/reorg-rehype": "^4.1.2",
     "@testing-library/jest-dom": "6.1.2",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "@types/jest": "29.5.5",
     "@types/react": "18.2.8",
+    "eslint": "^8.55.0",
     "jest": "29.6.4",
     "jest-environment-jsdom": "29.6.4",
-    "typescript": "5.2.2"
+    "rehype-stringify": "^10.0.0",
+    "typescript": "5.2.2",
+    "unified": "^11.0.4"
   }
 }
