--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jest": "29.6.4",
     "jest-environment-jsdom": "29.6.4",
     "rehype-stringify": "^10.0.0",
+    "ts-jest": "^29.1.1",
     "typescript": "5.2.2",
     "unified": "^11.0.4"
   }
